hphp/hack/test/typecheck/pending_if3.php.exp
File "pending_if3.php", line 21, characters 10-11:
Invalid return type (Typing[4110])
File "pending_if3.php", line 12, characters 15-17:
Expected int
File "pending_if3.php", line 14, characters 10-14:
But got bool
